2009-08-28  Christian Hergert  <chris@dronelabs.com>

	* PyBinding.Gui/PythonEditorCompletion.cs: Do completion on \t
	  and \n. Keep track of the number of "." in the query and
	  limit our search depth to save us a huge amount of object
	  creations and deserializations.

	* Resources/Schema.sql: Add a Depth field that includes
	  precalculated number of "." in the FullName and Index it. We
	  can then search on this during resolve time.

	* PyBinding.Parser/ParserItem.cs: Add Depth field.

	* PyBinding.Parser/ParserDatabase.cs: Add Depth field and
	  upgrade database if old format is discovered. Also allow for
	  searching with a specific depth to limit the result set.

2009-08-27  Christian Hergert  <chris@dronelabs.com>

	* PyBinding.Parser/ParserDatabase.cs: Use shared timespan for
	  lock timeouts.

2009-08-27  Christian Hergert  <chris@dronelabs.com>

	* PyBinding.Parser/ParserItem.cs: Add ParserIteypType.Any.

	* PyBinding.Parser/ParserDatabase.cs: Ignore item type if its
	  ParserItemType.Any.

2009-08-27  Christian Hergert  <chris@dronelabs.com>

	* PyBinding.Gui/PythonEditorCompletion.cs: Cleanup
	  GetTriggerWord to be a bit more accurate.

2009-08-27  Christian Hergert  <chris@dronelabs.com>

	* PyBinding.Gui/PythonEditorCompletion.cs:  Do not prematurely complete within the "from " completion entry.

2009-08-27  Christian Hergert  <chris@dronelabs.com>

	* PyBinding.Gui/PythonEditorCompletion.cs: Make sure we dont limit the completion results to pakcages only if we have a trigger word.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* PyBinding.csproj:
	* gtk-gui/gui.stetic: We now depend on gtk# 2.12.8, Mono 2.4,
	  and Mono.Addins 0.4.

2009-08-25  Christian Hergert  <chris@dronelabs.com>

	* PyBinding.Compiler/Python25Compiler.cs: Only compile .py files.

2009-08-25  Christian Hergert  <chris@dronelabs.com>

	* PyBinding/PyBinding.csproj:
	* PyBinding/PyBinding.addin.xml:
	* PyBinding/Resources/PythonStylePolicy.xml: